<resources>
    <!-- TODO:titulos layouts -->
    <string name="app_name">BangBang</string>
    <string name="layout_login">Iniciar Sesión</string>
    <string name="layout_informacion">Información</string>
    <string name="principal">Home</string>
    <string name="lista">Tickets</string>
    <string name="reservas">Reservas</string>
    <string name="ajustes">Ajustes</string>
    <string name="cerrar">Cerrar Sesión</string>
    <string name="inciar">Iniciar</string>
    <string name="registrar_">Registrar</string>
    <string name="informacion">Información</string>
    <string name="login">login</string>
    <string name="contraseña">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="recordar_usuario">Recordar usuario</string>
    <string name="registrate">Registrar</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_camcelar">Cancelar</string>
    <string name="fecha_evento">Fecha de Evento:</string>
    <string name="fecha_RESERVA">Fecha de Reserva:</string>
    <string name="sep_up">Registrar</string>
    <string name="apellido">Apellido</string>
    <string name="telefono">Telefono</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="usuario">Usuario</string>
    <string name="email">Email</string>
    <string name="pass">Contraseña</string>

    <string name="recordar">Recordar</string>
    <string name="login_1">Login</string>
    <string name="reservar">Reservar</string>
    <string name="registrar_1">Registrar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="urlhost">"http://bangbanghome.000webhostapp.com/api/v1/"</string>
    <string name="banbang_default">BANGBANG</string>
    <string name="bangbang_email">contacto@bangbang.com</string>
    <string name="direccion">Calle Toset   6 Barcelona 08916   Tel. +34 911 453 534   Cel. +34 678 234 845</string>


    <!-- TODO: datos  llaves de la sharent de datosusuario -->
    <string name="datosusuario">datosUsuario</string>
    <string name="usuregistrado">registrado</string>
    <string name="idusuario">idusuario</string>
    <string name="nombreUsuario">nombre</string>
    <string name="correoUsuario">correo</string>
    <string name="passUsuario">password</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
