<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/principal"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/Principal" />
        <item
            android:id="@+id/lista"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/lista" />
        <item
            android:id="@+id/ajustes"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/ajustes" />
        <item
            android:id="@+id/cerrar_secion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/cerrar" />

    </group>
</menu>