<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    android:gravity="center"
    tools:context="daudo.zamora.edison.bangbang.fragmentos.LoginFragment">
    <LinearLayout
       android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/ed_email"
            style="@style/content_text_email"/>
        <EditText
            android:id="@+id/ed_Pass"
            style="@style/content_text_pass"/>
        <CheckBox
            android:id="@+id/chb_recordar_usuario"
             style="@style/content_text"
            android:hint="@string/recordar"/>
        <Button
           android:id="@+id/btn_login_aceptar"
            style="@style/botones"
            android:text="@string/login_1"/>
        <TextView
            android:id="@+id/tv_signup"
            android:padding="19dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/registrar_1"
            android:textSize="20dp"
            android:textColor="#fff"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
