<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="daudo.zamora.edison.bangbang.fragmentos.Registro_Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Datos Registro"
            android:gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/nombre" />
            <EditText
                android:id="@+id/edt_reg_nombre"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Apellido"/>
            <EditText
                android:id="@+id/edt_reg_apellido"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Correo"/>
            <EditText
                android:id="@+id/edt_reg_correo"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Password"/>
            <EditText
                android:id="@+id/edt_reg_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Reprtit password"/>
            <EditText
                android:id="@+id/edt_reg_repe_pass"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:layout_gravity="center"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Ciudad"/>
           <Spinner
               android:id="@+id/spiner_reg_ciudad"
               android:layout_weight="1"
               android:layout_width="0dp"
               android:layout_height="40dp"
               android:entries="@array/ciudades"
               android:layout_gravity="center"
               android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp">
            <CheckBox
                android:id="@+id/checkbox_registro"
                style="@style/chechbox"
                android:text="Soy mayor de ediad"/>
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_registro_aceptar"
                style="@style/botones"
                android:text="@string/btn_aceptar"/>
            <Button
                android:id="@+id/btn_registro_camcelar"
                style="@style/botones"
                android:text="@string/btn_camcelar"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
